--- a/options.html
+++ b/options.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -11,10 +12,10 @@
 	</div>
 	<div class="container config-list">
 		<div class="config">
-			<div><span>config1</span><input type="text" value="http://localhost/"></div>
+			<div><span>config1</span><label>Base: <input type="text" value="http://localhost/"></label></div>
 			<ul>
 				<li>
-					<label class="checkbox"><input type="checkbox"></label>
+					<input type="checkbox">
 					<input type="text" value="index.html">
 					<input type="text" value="index.html">
 				</li>
